# poc_ouster

./: CMakeLists.txt
include/: RingBuffer.h
include/ouster/impl/: build.h
include/spinnaker/: Camera.h  CameraBase.h  CameraDefs.h  ChunkData.h  Image.h  ImageList.h  ImageProcessor.h  SpinnakerDefs.h  System.h  TransportLayerDefs.h  TransportLayerDevice.h
include/spinnaker/Interface/: IChunkData.h  IDeviceArrivalEventHandler.h  IDeviceRemovalEventHandler.h  IImage.h  IInterfaceArrivalEventHandler.h  IInterfaceRemovalEventHandler.h
include/spinnaker/spinc/: CameraDefsC.h  ChunkDataDefC.h  QuickSpinDefsC.h  SpinnakerC.h  SpinnakerDefsC.h  TransportLayerDefsC.h  TransportLayerDeviceC.h
lib/pcl/: libpcl_common.so.1.10.0  libpcl_io.so.1.10.0  libpcl_io_ply.so.1.10.0  libpcl_kdtree.so.1.10.0  libpcl_keypoints.so.1.10.0  libpcl_ml.so.1.10.0  libpcl_octree.so.1.10.0  libpcl_outofcore.so.1.10.0  libpcl_people.so.1.10.0  libpcl_registration.so.1.10.0  libpcl_search.so.1.10.0  libpcl_stereo.so.1.10.0  libpcl_visualization.so.1.10.0
lib/spinnaker/: libSpinUpdate.so.2.7.0.128  libSpinVideo.so.2.7.0.128  libSpinVideo_C.so.2.7.0.128  libSpinnaker_C.so.2.7.0.128
src/: ouster_main.cpp  ouster_main.h
